@@ -17,7 +17,7 @@ or any other partitioning tool to create a FAT16 partition, and then
 create the filesystem using:
 
 <informalexample><screen>
-# mkdosfs /dev/<replaceable>sda1</replaceable>
+# mkdosfs /dev/<replaceable>sdX1</replaceable>
 </screen></informalexample>
 
 Take care that you use the correct device name for your USB stick. The
@@ -28,31 +28,32 @@ Take care that you use the correct device name for your USB stick. The
 
 In order to start the kernel after booting from the USB stick, we will
 put a boot loader on the stick. Although any boot loader
-(e.g. <command>LILO</command>) should work, it's convenient to use
-<command>SYSLINUX</command>, since it uses a FAT16 partition and can
+(e.g. <classname>lilo</classname>) should work, it's convenient to use
+<classname>syslinux</classname>, since it uses a FAT16 partition and can
 be reconfigured by just editing a text file. Any operating system
 which supports the FAT file system can be used to make changes to the
 configuration of the boot loader.
 
 </para><para>
 
-To put <command>SYSLINUX</command> on the FAT16 partition on your USB
+To put <classname>syslinux</classname> on the FAT16 partition on your USB
 stick, install the <classname>syslinux</classname> and
 <classname>mtools</classname> packages on your system, and do:
 
 <informalexample><screen>
-# syslinux /dev/<replaceable>sda1</replaceable>
+# syslinux /dev/<replaceable>sdX1</replaceable>
 </screen></informalexample>
 
 Again, take care that you use the correct device name. The partition
-must not be mounted when starting <command>SYSLINUX</command>. This
+must not be mounted when starting <command>syslinux</command>. This
 procedure writes a boot sector to the partition and creates the file
 <filename>ldlinux.sys</filename> which contains the boot loader code.
 
 </para><para>
 
-Mount the partition (<userinput>mount /dev/sda1 /mnt</userinput>) and
-copy the following files from the Debian archives to the stick:
+Mount the partition
+(<userinput>mount /dev/<replaceable>sdX1</replaceable> /mnt</userinput>)
+and copy the following installer image files to the stick:
 
 <itemizedlist>
 <listitem><para>
@@ -65,30 +66,25 @@ copy the following files from the Debian archives to the stick:
 <filename>initrd.gz</filename> (initial ramdisk image)
 
 </para></listitem>
-<listitem><para>
-
-<filename>syslinux.cfg</filename> (SYSLINUX configuration file)
-
-</para></listitem>
-<listitem><para>
-
-Optional kernel modules
-
-</para></listitem>
 </itemizedlist>
 
-If you want to rename the files, please note that
-<command>SYSLINUX</command> can only process DOS (8.3) file names.
+You can choose between either the regular version or the graphical version
+of the installer. The latter can be found in the <filename>gtk</filename>
+subdirectory. If you want to rename the files, please note that
+<classname>syslinux</classname> can only process DOS (8.3) file names.
 
 </para><para>
 
-The <filename>syslinux.cfg</filename> configuration file should
-contain the following two lines:
+Next you should create a <filename>syslinux.cfg</filename> configuration
+file, which at a bare minimum should contain the following two lines:
 
 <informalexample><screen>
 default vmlinuz
 append initrd=initrd.gz
 </screen></informalexample>
+
+For the graphical installer you should add
+<userinput>video=vesa:ywrap,mtrr vga=788</userinput> to the second line.
 
 </para>
    </sect3>
